update logo and main color

--- a/css/leon.css
+++ b/css/leon.css
@@ -1,6 +1,6 @@
 /* Start Variables */
 :root {
-    --main-color: #10cab7;
+    --main-color: #28a7ea;
     --secondary-color: #2c4755;
     --section-padding: 60px;
     --section-background: #f6f6f6;
