--- a/css/leon.css
+++ b/css/leon.css
@@ -313,6 +313,7 @@ background-color: white;
 
 /* start About */
 .about{
+  display: none;
     padding-top: var(--section-padding);
     padding-bottom: calc(var(--section-padding) + 60px);
 
@@ -406,7 +407,8 @@ background-color: white;
  .contact{
     padding-top: var(--section-padding);
     padding-bottom: var(--section-padding);
-    background-color: var(--section-background);
+    /* background-color: var(--section-background); */
+    background-color: white;
  }
 
  .contact .info{
@@ -438,13 +440,14 @@ background-color: white;
  }
 
  .contact .info .social i{
-    margin-left: 10px;
+    margin-right: 15px;
     color: var(--secondary-color);
+    font-size: 28px;
  }
 @media(max-width:767px){
     .contact .info .lable, 
     .contact .info .link{
-        font-size: 25px;
+        font-size: 20px;
     }
 }
  /* End Contact */
@@ -452,7 +455,7 @@ background-color: white;
  /* start Footer */
  .footer{
     background-color: var(--secondary-color);
-    color: white;
+    color:#ebeced;
     padding: 30px 10px;
     text-align: center;
     font-size: 18px;
