--- a/css/leon.css
+++ b/css/leon.css
@@ -68,88 +68,102 @@
     }
   }
   /* End Components */
+
   /* Start Header */
-  .header {
+  header {
     padding: 20px;
+    position:absolute;
+    width: 100%;
+    z-index: 2;
   }
-  .header .container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  .header .logo {
-    width: 60px;
-  }
-  .header .links {
+  header .container{
     position: relative;
-  }
-  .header .links:hover .icon span:nth-child(2) {
-    width: 100%;
-  }
-  .header .links .icon {
-    width: 30px;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-end;
+    min-height: 60px;
+    justify-content: space-between;
   }
-  .header .links .icon span {
-    background-color: #333;
-    margin-bottom: 5px;
-    height: 2px;
+header .logo{
+  order: 2;
+}
+
+  header .container .logo img{
+    height: 90px;
   }
-  .header .links .icon span:first-child {
-    width: 100%;
+
+  header .container nav{
+    display: flex;
+    flex: 1;
+    justify-content: flex-start;
+    align-items: center;
+    order: 1;
   }
-  .header .links .icon span:nth-child(2) {
-    width: 60%;
-    transition: var(--main-duration);
+
+  header nav .toggle-menu{
+    color: var(--main-color);
+    font-size: 20px;
   }
-  .header .links .icon span:last-child {
-    width: 100%;
-  }
-  .header .links ul {
+  header nav ul{
+    display: flex;
     list-style: none;
-    margin: 0;
-    padding: 0;
-    background-color: #f6f6f6;
-    position: absolute;
-    right: 0;
-    min-width: 200px;
-    top: calc(100% + 15px);
-    display: none;
-    z-index: 1;
   }
-  .header .links ul::before {
-    content: "";
-    border-width: 10px;
-    border-style: solid;
-    border-color: transparent transparent #f6f6f6 transparent;
-    position: absolute;
-    right: 5px;
-    top: -20px;
-  }
-  .header .links:hover ul {
-    display: block;
-  }
-  .header .links ul li a {
-    display: block;
-    padding: 15px;
+  header nav ul li a{
     text-decoration: none;
-    color: #333;
-    transition: var(--main-duration);
+    font-size: 18px;
+    padding: 20px 10px;
+    color: var(--main-color);
+    font-size: 20px;
   }
-  .header .links ul li a:hover {
-    padding-left: 25px;
+
+@media (min-width: 767px){
+  header .container nav .toggle-menu{
+    display: none;
   }
-  .header .links ul li:not(:last-child) a {
-    border-bottom: 1px solid #ddd;
+}
+
+@media (max-width: 767px){
+  header .container .logo img {
+    height: 50px;
   }
+  header nav ul{
+    display: none;
+  }
+
+
+  header nav .toggle-menu:hover + ul{
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 100%;
+    right: 0;
+    transition: 0.5s;
+    z-index: 3;
+  }
+  header nav ul{
+    padding: 0;
+    background-color: var(--main-color);
+    opacity: 40%;
+    width: 100%;
+   margin-top: 0;
+  }
+
+  header nav ul li{
+    padding: 20px;
+    border-bottom: 1px solid white;
+  }
+  header nav ul li a{
+    color: white;
+   
+  }
+
+}
   /* End Header */
+
+  
   /* Start Landing Section */
   .landing {
     background-image: url(../images/landing.jpeg);
     background-size: cover;
-    height: calc(100vh - 64px);
+    height: calc(100vh + 60px);
     position: relative;
   }
   .landing .intro-text {
@@ -171,6 +185,19 @@
     font-size: 19px;
     line-height: 1.8;
     
+  }
+
+  @media(max-width: 767px){
+    .landing .intro-text h1 {
+      font-size: 40px;
+      color: var(--main-color);
+      padding-bottom: 15px;
+    }
+    .landing .intro-text p {
+      font-size: 19px;
+      line-height: 1.8;
+      
+    }
   }
   /* End Landing Section */
   /* Start Features */
