UPDATE BACK GROUND COLOR PORTIFOLIO SECTION

--- a/css/leon.css
+++ b/css/leon.css
@@ -378,7 +378,7 @@ header .logo{
 .portfolio{
     padding-top: 60px;
     padding-bottom: 60px;
-    
+    background-color: var(--section-background);
 }
 
 .portfolio .portfolio-content{
