add img section

--- a/DesignTwo/css/kasper.css
+++ b/DesignTwo/css/kasper.css
@@ -208,7 +208,6 @@ header .container::after{
 /* end header */
 /* start Landing */
 .landing{
-  display: none;
   min-height: 100vh;
   background-image: url(../images/landing.jpg);
   background-size: cover;
@@ -299,7 +298,6 @@ header .container::after{
 
 /* start services */
 .services{
-  display: none;
   padding-top: var(--section-padding);
   padding-bottom: var(--section-padding);
 }
@@ -414,3 +412,90 @@ padding: 15px 0;
   
 }
 /* End Design */
+.portfolio{
+  padding-top: var(--section-padding);
+  padding-bottom: var(--section-padding);
+}
+
+.portfolio .shuffle{
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+
+.portfolio .shuffle li{
+  padding: 10px;
+}
+
+.portfolio .shuffle li.active{
+  background-color: var(--main-color);
+  color: white;
+}
+
+.portfolio .img-container{
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 60px;
+}
+
+.portfolio .img-container .box{
+  overflow: hidden;
+  position: relative;
+}
+
+@media (min-width:768px) {
+  .portfolio .img-container .box{
+    flex-basis: 50%;
+  }
+}
+
+@media (min-width:1199px) {
+  .portfolio .img-container .box{
+    flex-basis: 25%;
+  }
+}
+
+.portfolio .img-container .box .caption{
+  position: absolute;
+  left: 0;
+  padding: 20px;
+  background-color: white;
+  width: 100%;
+  transition: 0.3s;
+  bottom: -100%;
+}
+
+.portfolio .img-container .box:hover .caption{
+  bottom: 0;
+}
+
+.portfolio .img-container .box:hover img{
+  transform: rotate(3deg) scale(1.1);
+}
+
+.portfolio .img-container .box img{
+  max-width: 100%;
+  transition: 0.3s;
+}
+
+.portfolio .img-container .box .caption h4{
+  font-weight: normal;
+  margin-bottom: 10px;
+}
+.portfolio .img-container .box .caption p{
+ color: var(--main-color);
+}
+
+.portfolio .more{
+  background-color: var(--main-color);
+  color: white;
+  padding: 15px 20px;
+  display: block;
+  width: fit-content;
+  margin: 30px auto;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+
+/* end portfolio */
