--- a/DesignTwo/css/kasper.css
+++ b/DesignTwo/css/kasper.css
@@ -499,3 +499,63 @@ padding: 15px 0;
 
 
 /* end portfolio */
+
+/* Start Vedio */
+.video{
+  position: relative;
+}
+.video::before{
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0 0 0 / 40%);
+}
+.video video{
+  width: 100%;
+}
+.video .text{
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  text-align: center;
+  width: 100%;
+  padding: 50px;
+  color: white;
+  background-color: var(--transparent-color);
+}
+
+.video .text h2{
+  font-weight: normal;
+  text-transform: uppercase;
+  padding-bottom: 20px;
+  
+}
+.video .text p{
+  padding-bottom: 20px;
+}
+.video .text button{
+  background-color: black;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  text-transform: uppercase;
+}
+/* End Vedio */
+
+/* start AboutUs */
+.about{
+  padding-top: var(--section-padding);
+  text-align: center;
+  overflow: hidden;
+}
+
+.about img{
+  position: relative;
+  bottom: -120px;
+  margin-top: -120px ;
+  max-width: 100%;
+}
+/* End AboutUs */
