--- a/DesignTwo/css/kasper.css
+++ b/DesignTwo/css/kasper.css
@@ -559,3 +559,67 @@ padding: 15px 0;
   max-width: 100%;
 }
 /* End AboutUs */
+
+/* start stat */
+.stats{
+  padding-top: var(--section-padding);
+  padding-bottom: var(--section-padding);
+  background-image: url(../images/stats.png);
+  background-size: cover;
+  position: relative;
+  text-align: center;
+}
+
+.stats::before{
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0 0 0 /75%);
+}
+
+.stats .container{
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.stats .box{
+  color: white;
+  padding: 50px;
+  background-color: var(--transparent-color);
+}
+
+@media (min-width:768px){
+  .stats .box{
+    flex-basis: 50%;
+  }
+}
+
+@media (min-width:992px){
+  .stats .box{
+    flex-basis: 25%;
+  }
+}
+
+@media (max-width:767px){
+  .stats .box{
+    flex-basis: 100%;
+  }
+}
+
+.stats .box i{
+  background-color: black;
+  padding: 15px;
+  border-radius: 50%;
+  margin: 0  auto 30px;
+}
+
+.stats .box .number{
+  font-size: 50px;
+  font-weight: bold;
+  margin: 0  0 20px;
+}
+/* end stat */
