--- a/css/leon.css
+++ b/css/leon.css
@@ -551,6 +551,27 @@ background-color: white;
     margin-bottom: 40px;
  }
 
+ .contact .info form .main-input{
+  width: 70%;
+  margin: 10px;
+  padding: 20px;
+  outline: none;
+  border: 1px solid var(--main-color);
+ }
+
+ .contact .info form input[type="submit"]{
+  border: none;
+  display: flex;
+  margin-right: auto;
+  margin-left: 15%;
+  margin-top: 20px;
+  padding: 20px;
+  background-color: var(--main-color);
+  color: white;
+  font-weight: 700;
+  cursor: pointer;
+ }
+
  .contact .info .social{
     display: flex;
     justify-content: center;
